@@ -12,6 +12,7 @@ New Features:
 	  implementing EventListener (Marcus Redeker, ORCJAVA-465)
   - More lenient CORS headers (Christian Bauer, ORCJAVA-472)
   - Report when EnOcean rocker switch is released (ORCJAVA-473)
+  - Improve 1-wire implementation (Eric Bariaux, ORCJAVA-475)
 
 Controller Pro 1.1.1
 ====================
